<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sorens Awesome Movie DB</string>
    <string name="prev_button_text">Prev</string>
    <string name="next_button_text">Next</string>
    <string name="view_button_text">View</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_web">Web</string>
    <string name="movieTitle">Title</string>

    <string name="movie_genre">Genre:</string>
    <string name="movie_url">URL:</string>
    <string name="movie_rating">Rating</string>
    <string name="movie_watched">Has Watched Movie:</string>

</resources>
